--- a/www/templates/tab-learn.html
+++ b/www/templates/tab-learn.html
@@ -1,9 +1,11 @@
 <ion-view view-title="Learn">
     <ion-content>
         <ion-list>
-            <ion-toggle ng-model="settings.enableFriends">
-                Enable Friends
-            </ion-toggle>
+            <ion-item class="item item-icon-left" ng-repeat="resource in resources ">
+                    <i class="icon {{resource.icon}} positive"></i>
+                    <h2>{{resource.name}}</h2>
+                    <p>{{resource.numberOfResources}} resource available</p> <!--resource(s)-->
+            </ion-item>
         </ion-list>
     </ion-content>
 </ion-view>
