--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,12 +1,20 @@
 <ion-view view-title="Login" hide-nav-bar="true">
-    <ion-content scroll="false" has-bouncing="false">
-        <div class="center">
-            <h1 style="font-size: 5em; font-weight:500;">Restory.</h1>
-            <h2 style="text-align: right">Anonymous peer support.</h2>
-            <h3 style="text-align: left">We're here for you.</h3>
+    <ion-content scroll="false" has-bouncing="false" class="clouds">
+        <div class="center-horizontal" style="padding-top: 40px; width: 80%; max-width: 80%; display:block; margin:auto;">
+            <img src="img/Logo.png" style="no-repeat; width:100%; height:120px">
+            <h2 style="text-align: right; color: white">Anonymous peer support.</h2>
+            <h3 style="text-align: left; color: white">We're here for you.</h3>
 
             <ion-list class="list list-inset login-container">
-                <button class="button button-full button-outline button-positive" ng-click="login()">Tap here to begin</button>
+                <label class="item item-input item-floating-label" style="border-width: 0;">
+                <span class="input-label" style="color: white">Username</span>
+                <input type="text" placeholder="Username">
+              </label>
+              <label class="item item-input item-floating-label" style="border-left-width: 0; border-right-width: 0; border-color: white;">
+                <span class="input-label" style="color: white">Password</span>
+                <input type="text" placeholder="Password">
+              </label>
+                <button class="button button-block" ng-click="login()" style="opacity: 0.7; border: positive;">Log In</button>
             </ion-list>
         </div>
     </ion-content>
