--- a/www/templates/tab-learn.html
+++ b/www/templates/tab-learn.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Learn">
     <ion-content>
         <ion-list>
-            <ion-item class="item item-icon-left" ng-repeat="resource in resources ">
+            <ion-item class="item item-icon-left" ng-repeat="resource in resources" href="#">
                     <i class="icon {{resource.icon}} positive"></i>
                     <h2>{{resource.name}}</h2>
                     <p>{{resource.numberOfResources}} resource available</p> <!--resource(s)-->
