Integrated chat system
Can send and receive chat messages, displays on screen

--- a/www/templates/chat-detail.html
+++ b/www/templates/chat-detail.html
@@ -4,15 +4,13 @@
   The FriendsCtrl pulls data from the Friends service (service.js)
   The Friends service returns an array of friend data
 -->
-<ion-view view-title="{{chat.name}}">
+<ion-view view-title="{{chat.name}}" has-bouncing="false">
   <ion-content class="padding">
     <img ng-src="{{chat.face}}" style="width: 64px; height: 64px">
     <p>
       {{chat.lastText}}
     </p>
-      <ul id="messageList">
-      <li>FirstName: first message on list.</li>
-      </ul>
+      <ul id="messageList"></ul>
   </ion-content>
     
     <ion-footer-bar class="padding" style="height:80px">
