--- a/www/templates/tab-profile.html
+++ b/www/templates/tab-profile.html
@@ -1,12 +1,12 @@
 <ion-view view-title="Profile">
     <ion-content ion-content scroll="false">
         <ion-item style="border-width: 0;">
-            <img ng-src="{{chat.face}}" style="width: 120px; height: 120px; max-width: 100%; 
+            <img ng-src="img/adam.png" style="width: 120px; height: 120px; max-width: 100%; 
             max-height: 100%; display:block; margin:auto; background-repeat: no-repeat;
     background-position: 50%;
     border-radius: 50%;" class="padding">
             <h3 style="text-align: center">
-              {{chat.name}}
+              Mad Max
             </h3>
         </ion-item>
         <ion-list class="list list-inset login-container positive padding" style="width: 80%; max-width: 80%; display:block; margin:auto;">
