--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -1,25 +1,22 @@
-<ion-view view-title="Login" hide-nav-bar="true">
+<ion-view view-title="Register">
     <ion-content class="clouds">
         <div class="center-horizontal" style="padding-top: 40px; width: 80%; max-width: 80%; display:block; margin:auto;">
-            <img src="img/Logo.png" style="no-repeat; width:100%; height:120px">
-            <h2 style="text-align: right; color: white">Anonymous peer support.</h2>
-            <h3 style="text-align: left; color: white">We're here for you.</h3>
-
+            
             <ion-list class="list list-inset login-container">
                 <label class="item item-input item-floating-label" style="border-width: 0;">
                 <span class="input-label" style="color: white">Username</span>
                 <input type="text" ng-model="username" placeholder="Username">
-              </label>
+                </label>
               <label class="item item-input item-floating-label" style="border-left-width: 0; border-right-width: 0; border-color: white;">
                 <span class="input-label" style="color: white">Password</span>
                 <input type="password" ng-model="password" placeholder="Password">
               </label>
-                <button class="button button-block" ng-click="login(username,password)" style="opacity: 0.7; border: positive;">Log In</button>
+                <label class="item item-input item-floating-label" style="border-left-width: 0; border-right-width: 0; border-color: white;">
+                <span class="input-label" style="color: white">Confirm password</span>
+                <input type="password" ng-model="confirmPassword" placeholder="Confirm password">
+            </label>
+                <button class="button button-block" ng-click="createUser(username,password)" style="opacity: 0.7; border: positive;">Register</button>
             </ion-list>
         </div>
     </ion-content>
-    
-    <div class="bar bar-footer bar-calm" scrollable="false" ng-click="goRegisterPage()">
-        <div class="title">Sign Up</div>
-    </div>
 </ion-view>
