--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -10,10 +10,14 @@
                 <span class="input-label" style="color: white">Username</span>
                 <input type="text" ng-model="username" placeholder="Username">
               </label>
-              <label class="item item-input item-floating-label" style="border-left-width: 0; border-right-width: 0; border-color: white;">
+                <HR/>
+                <span class="inline-error" ng-show="usernameError"> {{usernameError}}</span>
+              <label class="item item-input item-floating-label" style="border-width: 0;">
                 <span class="input-label" style="color: white">Password</span>
                 <input type="password" ng-model="password" placeholder="Password">
               </label>
+                <HR/>
+                <span class="inline-error" ng-show="passwordError"> {{passwordError}}</span>
                 <button class="button button-block" ng-click="login(username,password)" style="opacity: 0.7; border: positive;">Log In</button>
             </ion-list>
         </div>
