--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -2,20 +2,26 @@
     <ion-content class="clouds">
         <div class="center-horizontal" style="padding-top: 40px; width: 80%; max-width: 80%; display:block; margin:auto;">
             
-            <ion-list class="list list-inset login-container">
+            <ion-list>
                 <label class="item item-input item-floating-label" style="border-width: 0;">
                 <span class="input-label" style="color: white">Username</span>
                 <input type="text" ng-model="username" placeholder="Username">
                 </label>
-              <label class="item item-input item-floating-label" style="border-left-width: 0; border-right-width: 0; border-color: white;">
+                <HR/>
+                <span class="inline-error" ng-show="usernameError">{{usernameError}}</span>
+              <label class="item item-input item-floating-label" style="border-width: 0;">
                 <span class="input-label" style="color: white">Password</span>
                 <input type="password" ng-model="password" placeholder="Password">
               </label>
-                <label class="item item-input item-floating-label" style="border-left-width: 0; border-right-width: 0; border-color: white;">
+                <HR/>
+                <span class="inline-error" ng-show="passwordError">{{passwordError}}</span>
+                <label class="item item-input item-floating-label" style="border-width: 0;">
                 <span class="input-label" style="color: white">Confirm password</span>
                 <input type="password" ng-model="confirmPassword" placeholder="Confirm password">
             </label>
-                <button class="button button-block" ng-click="createUser(username,password)" style="opacity: 0.7; border: positive;">Register</button>
+                <HR/>
+                <span class="inline-error" ng-show="confirmPasswordError"> {{confirmPasswordError}}</span>
+                <button class="button button-block" ng-click="createUser(username,password, confirmPassword)" style="opacity: 0.7; border: positive;">Register</button>
             </ion-list>
         </div>
     </ion-content>
