--- a/www/templates/chat-detail.html
+++ b/www/templates/chat-detail.html
@@ -9,7 +9,7 @@
       <ul id="messageList"></ul>
   </ion-content>
     
-    <ion-footer-bar class="padding" style="height:80px">
+    <ion-footer-bar class="padding">
     <div class="item item-input" style="width: 100%">
         <label class="item-input-wrapper">
           <input type="text" id='messageInput' placeholder="Write a message..." name="messageInput" ng-model="messageInputModel" ng-keypress="checkIfEnterKeyWasPressed($event, messageInputModel)">
