--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -8,17 +8,17 @@
             <ion-list class="list list-inset login-container">
                 <label class="item item-input item-floating-label" style="border-width: 0;">
                 <span class="input-label" style="color: white">Username</span>
-                <input type="text" ng-model="username" placeholder="Username">
+                <input type="text" name="username" id="username" ng-model="usernameModel" placeholder="Username">
               </label>
                 <HR/>
                 <span class="inline-error" ng-show="usernameError"> {{usernameError}}</span>
               <label class="item item-input item-floating-label" style="border-width: 0;">
                 <span class="input-label" style="color: white">Password</span>
-                <input type="password" ng-model="password" placeholder="Password">
+                <input type="password" name="password" id="password" ng-model="passwordModel" placeholder="Password">
               </label>
                 <HR/>
                 <span class="inline-error" ng-show="passwordError"> {{passwordError}}</span>
-                <button class="button button-block" ng-click="login(username,password)" style="opacity: 0.7; border: positive;">Log In</button>
+                <button class="button button-block" ng-click="login(usernameModel,passwordModel)" style="opacity: 0.7; border: positive;">Log In</button>
             </ion-list>
         </div>
     </ion-content>
