--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -10,32 +10,21 @@
             </button>
         </div>
     </ion-nav-buttons>
-    <ion-content>
-        <div id="groupChatList" class="list">
+    <ion-content scrollable="true">
+        <ion-list id="groupChatList">
         <div class="item item-divider">
             Social Support
         </div>  
-        
-        </div>
-        <!-- <ion-list>
-            <ion-item class="item-remove-animate item-avatar item-icon-right " ng-click="getChatDetail({{chat.groupName}})">
-                <img ng-src="{{chat.groupName}} ">
-                <i class="icon ion-chevron-right icon-accessory "></i>
-
-                <ion-option-button class="button-assertive " ng-click="remove(chat) ">
-                    Delete
-                </ion-option-button>
-            </ion-item>
-        </ion-list> -->
+        </ion-list>
     </ion-content>
     
-    <ion-footer-bar class="padding" style="height:80px">
+    <ion-footer-bar class="padding">
     <div class="item item-input" style="width: 100%">
         <label class="item-input-wrapper">
           <input type="text" id='newGroupChatInput' placeholder="create chat" name="newGroupChatInput" ng-model="newChatInputModel">
         </label>
         <button class="button button-small" ng-click="createGroup(newChatInputModel)">
-          New Chat
+          Add Chat
         </button>
       </div>
     </ion-footer-bar>
