in chat details, add chat header name

--- a/www/templates/chat-detail.html
+++ b/www/templates/chat-detail.html
@@ -4,7 +4,7 @@
   The FriendsCtrl pulls data from the Friends service (service.js)
   The Friends service returns an array of friend data
 -->
-<ion-view view-title="{{chat.name}}" has-bouncing="false">
+<ion-view view-title="{{chatName}}">
   <ion-content class="padding">
       <ul id="messageList"></ul>
   </ion-content>
