Add current username to profile page

--- a/www/templates/tab-profile.html
+++ b/www/templates/tab-profile.html
@@ -6,7 +6,7 @@
     background-position: 50%;
     border-radius: 50%;" class="padding">
             <h3 style="text-align: center">
-              Mad Max
+              {{User.username}}
             </h3>
         </ion-item>
         <ion-list class="list list-inset login-container positive padding" style="width: 80%; max-width: 80%; display:block; margin:auto;">
