--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -1,4 +1,4 @@
-<ion-view>
+<ion-view can-swipe-back="false">
     <ion-nav-buttons side="right">
         <div class="item-input-inset">
             <label class="item-input-wrapper">
