Implement learn list expand collapse functionality

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -35,3 +35,30 @@
     color: red;
     font-size: 100%;
 }
+
+
+.list .item.item-accordion {
+  line-height: 38px;
+  padding-left: 0px;
+    padding-right: 0px;
+  padding-top: 0;
+  padding-bottom: 0;
+  transition: 0.09s all linear;
+}
+
+.list .item.item-accordion.ng-hide {
+  line-height: 0px;
+}
+
+.list .item.item-accordion.ng-hide-add,
+.list .item.item-accordion.ng-hide-remove {
+  display: block !important;
+}
+
+.sub-item {
+  padding-left: 20px;
+}
+
+.sub-sub-item {
+  padding-left: 40px;
+}
