--- a/www/templates/tab-learn.html
+++ b/www/templates/tab-learn.html
@@ -1,30 +1,5 @@
 <ion-view view-title="Learn">
     <ion-content>
-        <!--<ion-list>
-            <ion-item class="item item-icon-left" ng-repeat="resource in resources" href="#">
-                    <i class="icon {{resource.icon}} positive"></i>
-                    <h2>{{resource.name}}</h2>
-                    <p>{{resource.numberOfResources}} resource available</p>
-            </ion-item>
-        </ion-list> -->
-        
-        
-     <!--  <ion-list>
-        <div ng-repeat="resource in resources">
-          <ion-item class="item item-icon-left" ng-click="toggleGroup(resource)" ng-class="{active: isGroupShown(resource)}">
-              <i class="icon {{resource.icon}} positive"></i>
-                    <h2>{{resource.name}}</h2>
-                    <p>{{resource.numberOfResources}} resource available</p>
-          </ion-item>
-          
-            <ion-item class="item-accordion" ng-click="toggleSubGroup(subheading)" ng-repeat="subheading in resource.subheadings" ng-show="isGroupShown(resource)">
-            {{subheading.name}}
-          </ion-item>
-            <ion-item class="item-accordion" ng-repeat="subheading in resource.subheadings" ng-show="isSubGroupShown(subheading)">
-            {{subheading.name}}
-          </ion-item>
-        </div>
-      </ion-list> -->
         
         <ion-list>
 
@@ -33,7 +8,7 @@
         <ion-item class="item item-icon-left" ng-click="toggleGroup(resource)" ng-class="{active: isGroupShown(resource)}">
               <i class="icon {{resource.icon}} positive"></i>
                     <h2>{{resource.name}}</h2>
-                    <p>{{resource.numberOfResources}} resource available</p>
+                    <p>X resource available</p>
           </ion-item>
 
         <ion-item class="item-accordion" ng-click="toggleSubGroup(subheading)" ng-repeat="subheading in resource.subheadings" ng-show="isGroupShown(resource)">
