Implement Learn detail page

--- a/www/templates/tab-learn.html
+++ b/www/templates/tab-learn.html
@@ -12,14 +12,14 @@
           </ion-item>
 
         <ion-item class="item-accordion" ng-click="toggleSubGroup(subheading)" ng-repeat="subheading in resource.subheadings" ng-show="isGroupShown(resource)">
-            
-            
-            <i class="icon padding-left padding-right" style="float:right;" ng-show='subheading.subsubheadings' ng-class="isSubGroupShown(subheading) ? 'ion-ios-arrow-up' : 'ion-ios-arrow-down'"></i>
-          <div class="item-text-center sub-item item-text-wrap">{{subheading.name}}</div>
+                
+            <p class="item-text-center sub-item item-text-wrap" style="font-size:100%;color:black">{{subheading.name}}
+            <i class="padding-left padding-right" style="float:right;" ng-show='subheading.subsubheadings' ng-class="isSubGroupShown(subheading) ? 'ion-ios-arrow-up' : 'ion-ios-arrow-down'"></i>
+            </p>
 
-          <ion-item  class="item-accordion" ng-repeat="subsubheading in subheading.subsubheadings" ng-show="isSubGroupShown(subheading)"  ng-click="goto('subheading.name')">
-            <div class="item-text-center sub-sub-item item-text-wrap">{{subsubheading.name}}</div>
-          </ion-item>
+            <ion-item  class="item-accordion" ng-repeat="subsubheading in subheading.subsubheadings" ng-show="isSubGroupShown(subheading)"  ng-click="goto('{{subsubheading.name}}')">
+                <div class="item-text-center sub-sub-item item-text-wrap">{{subsubheading.name}}</div>
+            </ion-item>
 
         </ion-item>
 
