--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -18,7 +18,7 @@
         </ion-list>
     </ion-content>
     
-    <ion-footer-bar class="padding">
+    <ion-footer-bar class="padding" keyboard-attach class="bar-assertive">
     <div class="item item-input" style="width: 100%">
         <label class="item-input-wrapper">
           <input type="text" id='newGroupChatInput' placeholder="create chat" name="newGroupChatInput" ng-model="newChatInputModel">
