--- a/www/templates/intro.html
+++ b/www/templates/intro.html
@@ -16,7 +16,7 @@
       </button>
       <button class="button button-positive button-clear no-animation"
               ng-click="startApp()" ng-show="slideIndex == 2">
-        Start using Restory
+        Start Restory
       </button>
     </ion-nav-buttons>
     <ion-slide-box on-slide-changed="slideChanged(index)">
