--- a/www/templates/tab-profile.html
+++ b/www/templates/tab-profile.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Profile">
     <ion-content ion-content>
         <ion-item style="border-width: 0;">
-            <img ng-src="/img/adam.png" style="width: 120px; height: 120px; max-width: 100%; 
+            <img ng-src="img/adam.jpg" style="width: 120px; height: 120px; max-width: 100%; 
             max-height: 100%; display:block; margin:auto; background-repeat: no-repeat;
             background-position: 50%;
             border-radius: 50%;" class="padding">
