Fix keyboard hovers over input textbox for iOS

--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -1,5 +1,5 @@
 <ion-view can-swipe-back="false">
-    <ion-nav-buttons side="right">
+   <!-- <ion-nav-buttons side="right">
         <div class="item-input-inset">
             <label class="item-input-wrapper">
                 <i class="icon ion-ios-search placeholder-icon"></i>
@@ -9,7 +9,7 @@
                 Cancel
             </button>
         </div>
-    </ion-nav-buttons>
+    </ion-nav-buttons> -->
     <ion-content scrollable="true">
         <ion-list id="groupChatList">
         <div class="item item-divider">
