--- a/www/templates/intro.html
+++ b/www/templates/intro.html
@@ -2,11 +2,11 @@
     <ion-nav-buttons side="left">
       <button class="button button-positive button-clear no-animation"
               ng-click="startApp()" ng-show="!slideIndex">
-        Skip Intro
+        Skip
       </button>
       <button class="button button-positive button-clear no-animation"
               ng-click="previous()" ng-show="slideIndex > 0">
-        Previous Slide
+        Previous
       </button>
     </ion-nav-buttons>
     <ion-nav-buttons side="right"> 
@@ -16,7 +16,7 @@
       </button>
       <button class="button button-positive button-clear no-animation"
               ng-click="startApp()" ng-show="slideIndex == 2">
-        Start Restory
+        Go Restory
       </button>
     </ion-nav-buttons>
     <ion-slide-box on-slide-changed="slideChanged(index)">
