--- a/www/templates/tab-profile.html
+++ b/www/templates/tab-profile.html
@@ -26,9 +26,19 @@
             
         </ion-list>
         
-        <button class="button button-outline button-positive" style="width: 80%; max-width: 100%; display:block; margin:auto;" ng-click="showMoodChart()">
+        <div class ="padding" style="padding-top: 30px">
+            
+            <button class="button button-outline button-positive" style="width: 80%; max-width: 100%; display:block; margin:auto;" ng-click="updateSelf()">
+                Update Self
+            </button>
+        </div>
+        
+        <div class ="padding" style="padding-top: 30px">
+            
+            <button class="button button-outline button-positive" style="width: 80%; max-width: 100%; display:block; margin:auto;" ng-click="showMoodChart()">
                 Self Tracker
-        </button>
+            </button>
+        </div>
         
         <div class ="padding" style="padding-top: 30px">
             
