Implement Terms and conditions page

--- a/www/templates/intro.html
+++ b/www/templates/intro.html
@@ -68,7 +68,7 @@
             </div>
             <select>
               <option>Yes</option>
-              <option>Not sure</option>
+              <option selected>Not sure</option>
               <option>No</option>
             </select>
         </label>
@@ -79,7 +79,7 @@
             </div>
             <select>
               <option>Male</option>
-              <option>Not sure</option>
+              <option selected>Not sure</option>
               <option>Female</option>
             </select>
         </label>
