--- a/www/templates/tab-profile.html
+++ b/www/templates/tab-profile.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Profile">
-    <ion-content ion-content>
+    <ion-content>
         <ion-item style="border-width: 0;">
             <img ng-src="img/adam.jpg" style="width: 120px; height: 120px; max-width: 100%; 
             max-height: 100%; display:block; margin:auto; background-repeat: no-repeat;
