--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -1,4 +1,4 @@
-<ion-view can-swipe-back="false">
+<ion-view view-title="Chats" can-swipe-back="false">
    <!-- <ion-nav-buttons side="right">
         <div class="item-input-inset">
             <label class="item-input-wrapper">
@@ -14,7 +14,7 @@
         <ion-list id="groupChatList">
         <div class="item item-divider">
             Social Support
-        </div>  
+        </div>
         </ion-list>
     </ion-content>
     
