--- a/www/templates/welcome-pop-up.html
+++ b/www/templates/welcome-pop-up.html
@@ -1,5 +1,4 @@
-<ion-content class="blueGradient padding">
-        <i class="ion-close-round padding" style="float:right;" ng-click="closePopUp()"></i>
+<ion-content>
     <div class="padding center-horizontal" align="center">
         <h2>Ready to talk?</h2>
 
