--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Login" hide-nav-bar="true">
     <ion-content>
         <div class="center-horizontal login-container">
-           <img src="img/Logo.png" class="center-horizontal login-logo">
+           <img src="img/Logo.png" class="center-horizontal login-logo"/>
 
             <ion-list class="list list-inset">
                 
